--- a/css/post.css
+++ b/css/post.css
@@ -89,8 +89,7 @@ table{
     text-align: center;
     width: -webkit-fill-available;
     border-collapse: collapse;
-    margin: 1.5rem;
-    /* max-width: 768px; */
+    font-size: unset;
 }
 table thead{
 
