--- a/css/widget.css
+++ b/css/widget.css
@@ -169,8 +169,8 @@ width: 10rem;
 .overlay{
     position: fixed;
     top: 0;
-    width: 100%;
-    height: 100%;
+    width: 100vw;
+    height: 100vh;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -197,7 +197,7 @@ width: 10rem;
     filter: brightness(1.2);
 }
 .overlay .img-zone .title{
-    font-size: 1.5rem;
+    /* font-size: 1.5rem; */
     text-align: center;
     margin-bottom: 0.5rem;
 }
@@ -207,4 +207,8 @@ width: 10rem;
     align-items: center;
     justify-content: center;
     flex-direction: column;
+}
+.overlay .img-zone img{
+    max-width: 100vw;
+    max-height: calc(100vh - 4rem);
 }
